--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
-    "ghcr.io/goldsam/dev-container-features/aws-sam-cli:latest": {},
-    "ghcr.io/devcontainers/features/rust:latest": {}
+    "ghcr.io/goldsam/dev-container-features/aws-sam-cli:1": {},
+    "ghcr.io/devcontainers/features/rust:1": {}
   }
 }
